syntax = "proto3";

package store;

// PetService declares all RPC calls for tags related functions.
service PetService {
    rpc InsertPet(InsertPetRequest) returns (InsertPetResponse) {}
    rpc UpdatePet(UpdatePetRequest) returns (UpdatePetResponse) {}
}

// InsertPetRequest defines request for RPC call insert pet.
message InsertPetRequest {
    Pet pet = 1;
}

// InsertPetResponse defines response for InsertPetsRequest RPC call. 
message InsertPetResponse {
    Pet pet = 1;
}

// UpdatePetRequest defines request for RPC call to update pet.
message UpdatePetRequest {
    uint64 id = 1;
    string name = 2;
    PetStatus status = 3;
}

// UpdatePetResponse defines response for UpdatePetRequest RPC call.
message UpdatePetResponse {
    int64 rows_affected = 1;
}

// Pet define structure for message Pet.
message Pet {
    uint64 id = 1;
    string name = 2;
    PetStatus status = 3;
    repeated string photo_urls = 4;
}

// PetStatus defines pet status
enum PetStatus {
    AVAILABLE = 0;
    PENDING = 1;
    SOLD = 2;
}